// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree properties when price original is set 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "role": "InlineTextBox",
            },
          ],
          "name": "Some product name",
          "role": "StaticText",
        },
      ],
      "level": 3,
      "name": "Some product name",
      "role": "heading",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "role": "InlineTextBox",
                },
              ],
              "name": "sale price",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "role": "InlineTextBox",
            },
          ],
          "name": "718,00 €",
          "role": "StaticText",
        },
        {
          "children": [
            {
              "children": [
                {
                  "role": "InlineTextBox",
                },
              ],
              "name": "original price",
              "role": "StaticText",
            },
          ],
          "role": "none",
        },
        {
          "children": [
            {
              "children": [
                {
                  "role": "InlineTextBox",
                },
              ],
              "name": "911,00 €",
              "role": "StaticText",
            },
          ],
          "name": "",
          "role": "deletion",
        },
      ],
      "role": "none",
    },
  ],
  "role": "none",
}
`;

exports[`accessibility should expose correct initial accessibility tree properties 1`] = `
{
  "children": [
    {
      "description": "Add to wishlist",
      "name": "Some product name 1.199,00 €",
      "role": "link",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
                {
                  "children": [
                    {
                      "children": [
                        {
                          "children": [
                            {
                              "role": "InlineTextBox",
                            },
                          ],
                          "name": "Add to wishlist",
                          "role": "StaticText",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
              ],
              "name": "Add to wishlist",
              "role": "button",
            },
            {
              "name": "",
              "role": "status",
            },
          ],
          "name": "",
          "role": "generic",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
      ],
      "name": "",
      "role": "generic",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "role": "InlineTextBox",
                },
              ],
              "name": "Some product name",
              "role": "StaticText",
            },
          ],
          "level": 3,
          "name": "Some product name",
          "role": "heading",
        },
        {
          "children": [
            {
              "children": [
                {
                  "role": "InlineTextBox",
                },
              ],
              "name": "1.199,00 €",
              "role": "StaticText",
            },
          ],
          "name": "",
          "role": "paragraph",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "generic",
}
`;
